[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "supabase==2.15.1",
    "openai==1.71.0",
    "python-dotenv==1.0.0",
    "fastapi>=0.110.0",
    "uvicorn==0.24.0",
    "pydantic>=2.10.0",
    "beautifulsoup4==4.12.3",
    "httpx==0.25.0"
]